# ryanair

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  availability_response.json  config.yaml  farfnd_response.json  flight_search.py  logging_config.py  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  test_all_flights.py  test_api.py  test_combinations.py  test_direct_api.py  test_flyan.py  test_multi_days.py  test_oneway.py  translations.py
.github/: pull_request_template.md
.github/workflows/: tests.yml
flight_search/: __init__.py  cache.py  client.py  nomad.py  searcher.py  utils.py
locales/: de.json  en.json  es.json  fr.json  it.json  pt.json  ru.json
static/: app.js  styles.css
templates/: index.html
templates/partials/: results.html
tests/: conftest.py  test_app.py  test_cache.py  test_e2e.py  test_flight_search.py  test_models.py  test_nomad.py  test_playwright.py  test_translations.py  test_utils.py
