[project]
name = "ryanair-flynomad"
version = "1.0.0"
description = "Cheap flight search and multi-city trip planner for Ryanair"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.28",
    "diskcache>=5.6",
    "pyyaml>=6.0",
    "python-dateutil>=2.8.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "jinja2>=3.1",
    "cachetools>=5.3",
    "structlog>=24.4",
    "tenacity>=9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-playwright>=0.5",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
